--- a/fuentes/visuales/grado07/guion03/guionAbierto/CS_07_03_CO_Recurso270/motor/css/f10b.css
+++ b/fuentes/visuales/grado07/guion03/guionAbierto/CS_07_03_CO_Recurso270/motor/css/f10b.css
@@ -54,6 +54,7 @@
     font-family: Verdana, Arial, sans-serif;
     font-size: 18px;
 	background-color: transparent;
+    overflow-y: auto;
 }
 
 .presentacion_texto p:first-child {
